# ros2-differential-robot

./: .gitignore  Makefile  README.md  empty_world.sdf  frames_2024-12-10_01.49.38.gv  numbers.txt  ourPlayground.data  ourPlayground.pgm  ourPlayground.yaml
schematic/ABDO/: ABDO Schematic.SchDoc  ABDO.PrjPcb  ABDO.PrjPcbStructure
schematic/ABDO/__Previews/: ABDO Schematic.SchDocPreview  Dr. Hussein Schematic.SchDocPreview  Hussein Schematic.SchDocPreview  Sheet1.SchDocPreview
src/abdo_firmware/: CMakeLists.txt  abdo_interface.xml  package.xml
src/abdo_firmware/firmware/robot_control/: robot_control.ino
src/abdo_firmware/include/abdo_firmware/: abdo_interface.hpp
src/abdo_firmware/launch/: joystick_test.launch.py
src/abdo_firmware/src/: abdo_interface.cpp
src/diff_drive_robot/: CMakeLists.txt  package.xml  setup.py
src/diff_drive_robot/launch/: diff_drive.launch.py
src/diff_drive_robot/models/world/: diff_drive.sdf
src/diff_drive_robot/src/: BasicSystem.cc  FullSystem.cc
src/diff_drive_robot/src/diff_drive_robot/: robot_mover.py
src/mpu6050/: CMakeLists.txt  README.md  package.xml
src/mpu6050/config/: params.yaml
src/mpu6050/include/mpu6050/: mpu6050.h  mpu6050_node.h
src/mpu6050/launch/: mpu6050.launch.py
src/mpu6050/src/: mpu6050.cpp  mpu6050_calibrate.cpp  mpu6050_hal.cpp  mpu6050_node.cpp
src/mpu6500_driver/: package.xml  setup.py
src/mpu6500_driver/mpu6500_driver/: mpu6500_driver.py
src/nav2_test/: package.xml  setup.py
src/nav2_test/config/: amcl.yaml  amcl_rviz.rviz  nav2_params.yaml  slam_toolbox.yaml
src/nav2_test/launch/: amcl.launch.py  localization_launch.py  nav2.launch.py  navigation_launch.py  slam.launch.py
src/nav2_test/maps/: map.pgm  resturant_map.pgm  resturant_map.yaml
src/nav2_test/nav2_test/: initial_pose_publisher.py  twist_stamper.py
src/neu_lidar/: package.xml  setup.cfg  setup.py
src/neu_lidar/config/: controllers.yaml  ekf-config.yaml  gz_bridge_config.yaml  map_created.rviz  mapper_params_online_async.yaml  resturant.rviz  slam_mapping.rviz
src/neu_lidar/launch/: neu_lidar_launch.py
src/neu_lidar/model/: car.xacro  components.xacro  gazebo_plugins.xacro  general_variables.xacro  nav2.xacro  shapes_inirtia.xacro  v3_approx_xacro.urdf
src/neu_lidar/model/world/: simple_world.sdf  walled_world.sdf  walled_world1.sdf
src/neu_lidar/neu_lidar/: goal_sender.py  joystick_twist.py  pose_recorder.py  publisher_table_num.py  server_table_num.py  subscriber_table_num.py
src/restaurant/: package.xml  setup.py
src/restaurant/launch/: restaurant.launch.py
src/restaurant/models/Restaurant/: Restaurant.dae  model.config  model.sdf
src/restaurant/world/: restaurant.sdf
src/restaurant_nav/: package.xml  setup.cfg  setup.py
src/restaurant_nav/config/: ekf-config.yaml  gz_bridge_config.yaml  map_created.rviz  mapper_params_online_async.yaml  restaurant_map.data  restaurant_map.pgm  restaurant_map.yaml
src/restaurant_nav/launch/: restaurant_nav_launch.py  serve_launch.py  table_localization_launch.py
src/restaurant_nav/model/: v3_approx_xacro.urdf
src/restaurant_nav/restaurant_nav/: goal_sender.py  pose_recorder.py  positions.yaml  server_table_num.py
src/urdf_try_moving/: package.xml  setup.cfg  setup.py
src/urdf_try_moving/launch/: demo_launch.py
src/urdf_try_moving/urdf/: v3_approx_xacro.rviz  v3_approx_xacro.urdf
src/urdf_try_moving/urdf_try_moving/: state_publisher.py
