<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diff_drive_robot</name>
  <version>0.0.0</version>
  <description>A differential drive robot package.</description>
  <maintainer email="abdelrahmanwael50@gmail.com">Abdelrahman Wael</maintainer>
  <license>MIT</license> <!-- Replace with your actual license -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gz-sim8</exec_depend> <!-- Add this if you use Gazebo -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
