<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>restaurant_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ahmedhesham1652001@gmail.com">ahmed-hehsam</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>rviz2</depend>
  <depend>slam_toolbox</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
